# SD_from_discord

./: README.md  get_started.py  pyproject.toml
src/sd_from_discord/: __init__.py
src/starter/: get_started.py
test/get_started/: test_get_started.py
tests/unittest/: test_get_started.py
