[project]
name = "sd-from-discord"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "abemaru", email = "ch4nge.lightening@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests", ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sd_from_discord"]
